# noti-temply-admin

./: .gitignore  README.md  docker-compose.yml
migration/: README.md  migration.sh  migration_db_to_files.py  pyproject.toml
server/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  environment.yml  main.py  pyproject.toml
server/app/: main.py
server/app/api/: layout_api.py  layouts.py  partial_api.py  partials.py  template_api.py  template_default_component_name_api.py  template_item_api.py  template_name_api.py  templates.py  version_api.py
server/app/core/: auth.py  config.py  dependency.py  exceptions.py  git_env.py  temply_manager.py  temply_version_env.py
server/app/core/temply/: __init__.py  items.py  mergers.py  schema.py  temply_env.py  utils.py
server/app/core/temply/metadata/: layout_parser.py  meta_model.py  meta_parser.py  partial_parser.py  template_parser.py
server/app/core/temply/parser/: layout_parser.py  meta_model.py  meta_parser.py  meta_util.py  partial_parser.py  template_parser.py
server/app/models/: common_model.py  layout_model.py  partial_model.py  template_model.py
server/app/repositories/: layout_repository.py  partial_repository.py  template_repository.py
server/app/services/: layout.py  layout_service.py  partial.py  partial_service.py  template.py  template_service.py
server/temply_app/: apps.py  router.py
server/temply_app/api/: layout_api.py  partial_api.py  system_api.py  template_api.py  template_default_component_name_api.py  template_name_api.py  version_api.py
server/temply_app/core/: auth.py  config.py  dependency.py  git_env.py  lru_cache.py  models.py  temply_version_env.py
server/temply_app/core/cache/: __init__.py  lru_cache.py
server/temply_app/core/temply/: temply_env.py
server/temply_app/core/utils/: cache_util.py  git_util.py
server/temply_app/models/: common_model.py  layout_model.py  partial_model.py  template_model.py
server/temply_app/repositories/: layout_repository.py  partial_repository.py  template_repository.py
server/temply_app/services/: layout_service.py  partial_service.py  template_service.py
server/tests/: conftest.py
server/tests/api/: test_layout_api.py
server/tests/core/: test_dependency.py  test_layout_parser.py  test_metadata_parser.py  test_partial_parser.py  test_partials_parser.py  test_template_parser.py  test_temply.py  test_temply_env.py
server/tests/data/layouts/: layout-1.j2  layout-3.j2  layout_1  layout_3  layout_4
server/tests/data/partials/: partials-1.j2  partials-2.j2  partials-3.j2  partials-31.j2  partials-42.j2  partials-43.j2  partials-44.j2  partials-45.j2  partials-46.j2  partials-50.j2  partials-53.j2  partials-54.j2  partials-55.j2  partials_1  partials_2  partials_3  partials_31  partials_42  partials_43  partials_44  partials_45  partials_46  partials_50  partials_53  partials_54  partials_55
server/tests/repository/: test_layout_repository.py  test_partial_repository.py  test_template_repository.py
server/tests/services/: test_layout_service.py  test_partial_service.py  test_template_service.py
(+124 files in other folders)
