[project]
name = "migration"
version = "0.1.0"
description = "Database migration tool for noti-temply"
requires-python = ">=3.11"
dependencies = [
    "mysql-connector-python>=8.0.0",
    "pydantic-settings>=2.2.1",
    "fastapi>=0.110.0",
    "jinja2>=3.1.3",
    "python-dotenv>=1.0.1",
    "aiofiles>=24.1.0",
    "jinja2schema>=0.1.0",
    "faker>=37.1.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.sdist]
packages = ["."]
